# as-ffi-bindings

./: .gitignore  Cargo.toml  README.md  bors.toml  crates.js  search-index.js  settings.html  shell.nix  source-files.js
.github/workflows/: cd.yml  ci.yml
as_ffi_bindings/: all.html  enum.Error.html  enum.Type.html  fn.abort.html  index.html  sidebar-items.js  struct.AnyPtr.html  struct.AnyPtrExported.html  struct.BufferPtr.html  struct.Env.html  struct.StringPtr.html  trait.Read.html  trait.Write.html
as_ffi_bindings/any_ptr/: enum.Type.html  struct.AnyPtr.html  struct.AnyPtrExported.html
as_ffi_bindings/buffer_ptr/: struct.BufferPtr.html
as_ffi_bindings/env/: struct.Env.html
as_ffi_bindings/string_ptr/: struct.StringPtr.html
as_ffi_bindings/tools/: fn.abort.html
implementors/as_ffi_bindings/: trait.Read.js  trait.Write.js
implementors/wasmer_as/: trait.Read.js
src/: any_ptr.rs  buffer_ptr.rs  env.rs  lib.rs  string_ptr.rs  tools.rs
src/as_ffi_bindings/: any_ptr.rs.html  buffer_ptr.rs.html  env.rs.html  lib.rs.html  string_ptr.rs.html  tools.rs.html
src/wasmer_as/: buffer_ptr.rs.html  env.rs.html  lib.rs.html  string_ptr.rs.html  tools.rs.html
tests/: README.md  abort.wasm  buffer.wasm  get_buffer.wasm  get_string.wasm  my_struct.wasm  sort_buffer.wasm  test_features.rs
wasmer_as/: all.html  enum.Error.html  fn.abort.html  index.html  struct.BufferPtr.html  struct.Env.html  struct.StringPtr.html  trait.Read.html  trait.Write.html
wasmer_as/buffer_ptr/: struct.BufferPtr.html
wasmer_as/env/: struct.Env.html
wasmer_as/tools/: fn.abort.html
(+15 files in other folders)
