[package]
name = "as-ffi-bindings"
version = "0.2.5"
authors = ["Adrien Zinger <zinger.ad@gmail.com>", "Yvan Sraka <yvan@sraka.xyz>", "Aurelia Dolo"]
edition = "2021"
rust-version = "1.56.1"
license = "Apache-2.0"
description = "Helpers to read and write memory in AssemblyScript wasm modules"
keywords = ["assemblyscript", "assembly-script", "wasm", "wasmer"]
repository = "https://github.com/cppccn/as-ffi-bindings"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = "2.3.0"
anyhow = "1"

[dev-dependencies]
lazy_static = "1"

[features]
no_thread = []
